--- a/package.json
+++ b/package.json
@@ -27,14 +27,6 @@
   "main": "./dist/index.cjs",
   "module": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "typesVersions": {
-    "*": {
-      "*": [
-        "./dist/index.d.ts",
-        "./dist/*"
-      ]
-    }
-  },
   "files": [
     "dist"
   ],
@@ -46,8 +38,10 @@
     "example:dev": "cp README.md example/README.md && npm -C example run dev",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "prepublishOnly": "npm run build",
+    "audit:fix": "pnpm audit --fix && pnpm install",
     "release": "bumpp",
+    "prepublishOnly": "pnpm install",
+    "publish": "bumpp",
     "test": "vitest",
     "test:ui": "vitest --ui",
     "test:coverage": "vitest --coverage",
@@ -55,57 +49,49 @@
     "test:component": "npx cypress open-ct -p 4000"
   },
   "dependencies": {
-    "@yankeeinlondon/code-builder": "^1.0.0-beta.1",
-    "@yankeeinlondon/link-builder": "^1.0.0-beta.1",
-    "@yankeeinlondon/meta-builder": "^1.0.0-beta.1",
-    "gray-matter": "^4.0.3",
+    "@yankeeinlondon/code-builder": "1.0.0",
+    "@yankeeinlondon/happy-wrapper": "^2.4.0",
+    "@yankeeinlondon/link-builder": "^1.0.0",
+    "@yankeeinlondon/meta-builder": "^1.0.0",
+    "gray-matter": "github:yankeeinlondon/gray-matter",
+    "happy-dom": "^6.0.4",
     "markdown-it": "^13.0.1",
+    "pathe": "^0.3.2",
     "source-map-js": "^1.0.2"
+  },
+  "peerDependencies": {
+    "@vitejs/plugin-vue": "^3.0.1",
+    "vite": "^3.0.2"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
-    "@antfu/ni": "^0.16.2",
+    "@antfu/ni": "^0.17.2",
     "@antfu/utils": "^0.5.2",
     "@rollup/pluginutils": "^4.2.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^18.0.0",
+    "@types/node": "^18.0.6",
     "@types/prismjs": "^1.26.0",
-    "@typescript-eslint/eslint-plugin": "^5.29.0",
-    "@typescript-eslint/parser": "^5.29.0",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@vitejs/plugin-vue-jsx": "^1.3.10",
-    "@vitest/ui": "^0.16.0",
+    "@typescript-eslint/eslint-plugin": "^5.30.7",
+    "@typescript-eslint/parser": "^5.30.7",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@vitest/ui": "^0.18.1",
     "@vue/runtime-core": "^3.2.37",
-    "@vue/test-utils": "^2.0.1",
-    "@vueuse/core": "^8.7.5",
-    "@yankeeinlondon/happy-wrapper": "^2.3.0",
+    "@vue/test-utils": "^2.0.2",
+    "@vueuse/core": "^8.9.4",
     "bumpp": "^8.2.1",
-    "c8": "^7.11.3",
+    "c8": "^7.12.0",
     "callsites": "^4.0.0",
-    "eslint": "^8.18.0",
+    "eslint": "^8.20.0",
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.12.1",
-    "happy-dom": "^5.3.1",
-    "markdown-it": "^13.0.1",
     "npm-run-all": "^4.1.5",
-    "pathe": "^0.3.0",
-    "rollup": "^2.75.7",
-    "tsup": "^6.1.2",
+    "rollup": "^2.77.0",
+    "tsup": "^6.1.3",
     "typescript": "^4.7.4",
-    "unocss": "^0.39.3",
-    "vite": "^2.9.12",
-    "vite-plugin-pages": "^0.24.2",
-    "vite-plugin-vue-layouts": "^0.6.0",
-    "vitest": "^0.16.0",
+    "vite": "^3.0.2",
+    "vitest": "^0.18.1",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
-  },
-  "peerDependencies": {
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@yankeeinlondon/happy-wrapper": "^2.2.0",
-    "happy-dom": "^5.3.1",
-    "vite": "^2.9.9",
-    "vue": "^3.2.37"
+    "vue-router": "^4.1.2"
   },
   "packageManager": "pnpm@7.1.7"
 }
