--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --dts --format cjs,esm --clean",
+    "build": "tsup src/index.ts --dts --format cjs,esm --clean --external @rollup/pluginutils",
     "watch": "tsup src/index.ts --dts --format cjs,esm --watch",
     "dev": "npm run build -- --watch",
     "example:build": "cp README.md example/README.md && npm -C example run build",
@@ -61,7 +61,7 @@
   },
   "peerDependencies": {
     "@vitejs/plugin-vue": "^3.0.1",
-    "vite": "^3.0.2"
+    "@rollup/pluginutils": "^4.2.1"
   },
   "devDependencies": {
     "@antfu/eslint-config": "^0.25.2",
@@ -85,6 +85,7 @@
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.12.1",
     "npm-run-all": "^4.1.5",
+    "picomatch": "^2.3.1",
     "rollup": "^2.77.0",
     "tsup": "^6.1.3",
     "typescript": "^4.7.4",
