--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.12.1",
     "npm-run-all": "^4.1.5",
+    "pnpm": "7.5.2",
     "rollup": "^2.77.0",
     "tsup": "^6.1.3",
     "typescript": "^4.7.4",
