--- a/example/package.json
+++ b/example/package.json
@@ -5,28 +5,27 @@
     "dev": "cross-env DEBUG=vite-plugin-md:* vite"
   },
   "dependencies": {
-    "@vueuse/core": "^8.7.5",
+    "@vueuse/core": "^8.9.4",
     "@vueuse/head": "^0.7.6",
     "vue": "^3.2.37",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.1.2"
   },
   "devDependencies": {
-    "@iconify/json": "^2.1.66",
-    "@unocss/preset-wind": "^0.39.3",
-    "@vitejs/plugin-vue": "^2.3.3",
-    "@yankeeinlondon/happy-wrapper": "^2.3.0",
+    "@iconify/json": "^2.1.81",
+    "@unocss/preset-wind": "^0.44.5",
+    "@vitejs/plugin-vue": "^3.0.1",
+    "@yankeeinlondon/happy-wrapper": "^2.4.0",
     "cross-env": "^7.0.3",
-    "happy-dom": "^5.3.1",
     "typescript": "^4.7.4",
-    "unocss": "^0.39.3",
-    "unplugin-auto-import": "^0.8.8",
-    "unplugin-vue-components": "^0.19.9",
-    "vite": "^2.9.12",
-    "vite-plugin-inspect": "^0.5.0",
-    "vite-plugin-md": "workspace:*",
-    "vite-plugin-pages": "^0.24.2",
+    "unocss": "^0.44.5",
+    "unplugin-auto-import": "^0.10.0",
+    "unplugin-vue-components": "^0.21.1",
+    "vite": "^3.0.2",
+    "vite-plugin-inspect": "^0.6.0",
+    "vite-plugin-md": "workspace:0.19.2",
+    "vite-plugin-pages": "^0.25.0",
     "vite-plugin-vue-layouts": "^0.6.0",
-    "vite-ssg": "^0.20.1",
-    "vue-tsc": "^0.38.1"
+    "vite-ssg": "^0.20.2",
+    "vue-tsc": "^0.39.0"
   }
 }
