--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "vite-plugin-md",
   "type": "module",
   "version": "0.19.2",
-  "packageManager": "pnpm@7.6.0",
+  "packageManager": "pnpm@7.5.4",
   "description": "Markdown for Vite",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
   "license": "MIT",
@@ -32,7 +32,7 @@
     "dist"
   ],
   "scripts": {
-    "build": "tsup src/index.ts --dts --format cjs,esm --clean --external @rollup/pluginutils",
+    "build": "tsup src/index.ts --dts --format cjs,esm --clean ",
     "watch": "tsup src/index.ts --dts --format cjs,esm --watch",
     "dev": "npm run build -- --watch",
     "example:build": "cp README.md example/README.md && npm -C example run build",
