--- a/package.json
+++ b/package.json
@@ -68,11 +68,11 @@
     "@rollup/pluginutils": "^4.2.1",
     "@type-challenges/utils": "^0.1.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "16",
+    "@types/node": "^16.11.45",
     "@typescript-eslint/eslint-plugin": "^5.30.7",
     "@typescript-eslint/parser": "^5.30.7",
     "@vitejs/plugin-vue": "^3.0.1",
-    "@vitest/ui": "^0.18.1",
+    "@vitest/ui": "^0.19.0",
     "@vue/runtime-core": "^3.2.37",
     "@vue/test-utils": "^2.0.2",
     "@vueuse/core": "^8.9.4",
@@ -89,7 +89,7 @@
     "tsup": "^6.1.3",
     "typescript": "^4.7.4",
     "vite": "^3.0.2",
-    "vitest": "^0.18.1",
+    "vitest": "^0.19.0",
     "vue": "^3.2.37",
     "vue-router": "^4.1.2"
   }
