--- a/package.json
+++ b/package.json
@@ -53,7 +53,7 @@
     "rollup": "^2.77.0"
   },
   "dependencies": {
-    "@yankeeinlondon/builder-api": "^0.3.1",
+    "@yankeeinlondon/builder-api": "*",
     "@yankeeinlondon/happy-wrapper": "^2.4.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
