--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -16,6 +16,7 @@
     "configurators",
     "Consolas",
     "crossorigin",
+    "customizability",
     "darcula",
     "dasherize",
     "duplicative",
@@ -34,6 +35,7 @@
     "Opengraph",
     "pathe",
     "pluginutils",
+    "powerpack",
     "prefetch",
     "SFC's",
     "Shiki",
