--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "vite-plugin-md",
   "type": "module",
-  "version": "0.20.2",
+  "version": "0.20.3",
   "packageManager": "pnpm@7.5.2",
   "description": "Markdown for Vite",
   "author": "Anthony Fu <anthonyfu117@hotmail.com>",
@@ -89,5 +89,10 @@
     "vitest": "^0.19.1",
     "vue": "^3.2.37",
     "vue-router": "^4.1.3"
+  },
+  "pnpm": {
+    "overrides": {
+      "undici@<=5.8.1": ">=5.8.2"
+    }
   }
 }
