--- a/package.json
+++ b/package.json
@@ -53,42 +53,42 @@
   },
   "dependencies": {
     "@yankeeinlondon/builder-api": "*",
-    "@yankeeinlondon/happy-wrapper": "^2.5.0",
+    "@yankeeinlondon/happy-wrapper": "^2.6.0",
     "gray-matter": "^4.0.3",
     "markdown-it": "^13.0.1",
     "source-map-js": "^1.0.2"
   },
   "devDependencies": {
-    "@antfu/eslint-config": "^0.25.2",
+    "@antfu/eslint-config": "^0.26.2",
     "@antfu/ni": "^0.17.2",
     "@antfu/utils": "^0.5.2",
     "@rollup/pluginutils": "^4.2.1",
     "@type-challenges/utils": "^0.1.1",
     "@types/markdown-it": "^12.2.3",
-    "@types/node": "^16.11.46",
-    "@typescript-eslint/eslint-plugin": "^5.31.0",
-    "@typescript-eslint/parser": "^5.31.0",
-    "@vitejs/plugin-vue": "^3.0.1",
-    "@vitest/ui": "^0.19.1",
-    "@vue/runtime-core": "^3.2.37",
+    "@types/node": "16",
+    "@typescript-eslint/eslint-plugin": "^5.36.1",
+    "@typescript-eslint/parser": "^5.36.1",
+    "@vitejs/plugin-vue": "^3.0.3",
+    "@vitest/ui": "^0.22.1",
+    "@vue/runtime-core": "^3.2.38",
     "@vue/test-utils": "^2.0.2",
-    "@vueuse/core": "^9.0.0",
+    "@vueuse/core": "^9.1.1",
     "bumpp": "^8.2.1",
     "c8": "^7.12.0",
     "callsites": "^4.0.0",
-    "eslint": "^8.20.0",
+    "eslint": "^8.23.0",
     "eslint-config-prettier": "^8.5.0",
     "fp-ts": "^2.12.2",
     "happy-dom": "^6.0.4",
     "npm-run-all": "^4.1.5",
-    "pathe": "^0.3.2",
-    "rollup": "^2.77.2",
-    "tsup": "^6.2.0",
-    "typescript": "^4.7.4",
-    "vite": "^3.0.3",
-    "vitest": "^0.19.1",
-    "vue": "^3.2.37",
-    "vue-router": "^4.1.3"
+    "pathe": "^0.3.5",
+    "rollup": "^2.78.1",
+    "tsup": "^6.2.3",
+    "typescript": "^4.8.2",
+    "vite": "^3.0.9",
+    "vitest": "^0.22.1",
+    "vue": "^3.2.38",
+    "vue-router": "^4.1.5"
   },
   "pnpm": {
     "overrides": {
