--- a/example/package.json
+++ b/example/package.json
@@ -8,9 +8,9 @@
   "dependencies": {
     "@vueuse/core": "^9.6.0",
     "@vueuse/head": "^1.0.22",
-    "@yankeeinlondon/code-builder": "^1.1.4",
-    "@yankeeinlondon/link-builder": "^1.1.4",
-    "@yankeeinlondon/meta-builder": "^1.1.4",
+    "@yankeeinlondon/code-builder": "^1.1.5",
+    "@yankeeinlondon/link-builder": "^1.1.6",
+    "@yankeeinlondon/meta-builder": "^1.1.5",
     "vue": "^3.2.45",
     "vue-router": "^4.1.6"
   },
@@ -26,7 +26,7 @@
     "unplugin-vue-components": "^0.22.12",
     "vite": "^3.2.5",
     "vite-plugin-inspect": "^0.7.10",
-    "vite-plugin-md": "workspace:0.20.4",
+    "vite-plugin-md": "workspace:*",
     "vite-plugin-pages": "^0.28.0",
     "vite-plugin-vue-layouts": "^0.7.0",
     "vite-ssg": "^0.22.1",
